<resources>
    <string name="app_name">Alumni++</string>

    <!-- region [MainActivity] -->
    <string name="Open">Open navigation drawer</string>
    <string name="Close">Close navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="sign_in">Sign In</string>
    <string name="log_out">Log out</string>
    <string name="menu">Menu</string>
    <string name="notification">Notification</string>
    <string name="friends">Friends</string>
    <string name="home">Home</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <!-- endregion -->

    <!-- region [AuthActivity] -->
    <string name="reg_personal_info"><b><u><i>Personal Information</i></u></b></string>
    <string name="reg_account_info"><b><u><i>Account Information</i></u></b></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="reg_sign_in"><u>Sign In</u></string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="session">Graduation Session</string>
    <string name="graduation_year">Graduation year</string>
    <string name="university_id">University ID</string>
    <string name="department">Department</string>
    <string name="university">University</string>
    <string name="full_name">Full Name</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="log_in">log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account"><u>Create Account</u></string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="admin_panel">Admin Panel</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="new_requests">New Requests:</string>
    <string name="verify_email">Verify</string>
    <string name="chat">Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_a_message">Type a message</string>
    <string name="post">Post</string>
    <string name="title_activity_profile_holder">ProfileHolderActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- endregion -->

</resources>