<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:padding="50dp">

    <TextView android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:layout_below="@id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"/>

    <ScrollView android:id="@+id/reg_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_above="@id/signupbtn"
        android:background="#272727"
        android:padding="10sp"
        android:fadeScrollbars="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:showDividers="middle"
            android:divider="@drawable/empty_divider">

            <TextView android:id="@+id/p_info_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_personal_info"
                android:textSize="20sp"
                android:textColor="#B3B3B3" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                style="@style/custom">
                <EditText
                    android:id="@+id/reg_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textCursorDrawable="@drawable/text_cursor"
                    android:autofillHints=""
                    tools:ignore="LabelFor,SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/university"
                style="@style/custom" >
                <EditText
                    android:id="@+id/reg_uni_name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textCursorDrawable="@drawable/text_cursor"
                    tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/department"
                style="@style/custom" >

                <EditText
                    android:id="@+id/reg_dept_name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textCursorDrawable="@drawable/text_cursor"
                    tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/university_id"
                style="@style/custom" >

                <EditText
                    android:id="@+id/reg_uni_id"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textCursorDrawable="@drawable/text_cursor"
                    tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/graduation_year"
                style="@style/custom" >

                <EditText
                    android:id="@+id/reg_grad_year"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textCursorDrawable="@drawable/text_cursor"
                    tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/session"
                style="@style/custom" >

                <EditText
                    android:id="@+id/reg_session"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textCursorDrawable="@drawable/text_cursor"
                    tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView android:id="@+id/auth_info_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_account_info"
                android:textSize="20sp"
                android:textColor="#B3B3B3" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/ic_baseline_mail_outline_24"
                style="@style/custom" >

                <EditText
                    android:id="@+id/reg_email"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textCursorDrawable="@drawable/text_cursor"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:counterMaxLength="20"
                app:counterEnabled="true"
                app:counterTextColor="@color/white"
                style="@style/custom" >

                <EditText
                    android:id="@+id/reg_pass"
                    android:maxLength="20"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textColor="@color/white"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textCursorDrawable="@drawable/text_cursor"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                app:passwordToggleEnabled="true"
                app:counterMaxLength="20"
                app:counterEnabled="true"
                app:counterTextColor="@color/white"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                style="@style/custom" >

                <EditText
                    android:id="@+id/reg_confirm_pass"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textColor="@color/white"
                    android:maxLength="20"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textCursorDrawable="@drawable/text_cursor"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/signupbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottomtxt"
        android:layout_marginTop="10dp"
        android:backgroundTint="#494949"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textSize="18sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView android:id="@+id/bottomtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:text="@string/already_have_an_account"/>

    <TextView
        android:id="@+id/reg_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/reg_sign_in"
        android:textColor="@color/white"
        tools:ignore="TouchTargetSizeCheck" />

</RelativeLayout>