<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:cardCornerRadius="15sp"
        app:cardBackgroundColor="#424242">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/cvtxt_style_0"
                    android:text="@string/full_name" />

                <TextView android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/cvtxt_style"
                    android:text="@string/full_name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/cvtxt_style_0"
                    android:text="@string/university" />

                <TextView android:id="@+id/user_university"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/cvtxt_style"
                    android:text="@string/full_name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/cvtxt_style_0"
                    android:text="@string/department"/>

                <TextView android:id="@+id/user_department"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/cvtxt_style"
                    android:text="@string/full_name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/cvtxt_style_0"
                    android:text="@string/university_id"/>

                <TextView android:id="@+id/user_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/cvtxt_style"
                    android:text="@string/full_name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/cvtxt_style_0"
                    android:text="@string/graduation_year"/>

                <TextView android:id="@+id/user_gradyr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/cvtxt_style"
                    android:text="@string/full_name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/cvtxt_style_0"
                    android:text="@string/session"/>

                <TextView android:id="@+id/user_session"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/cvtxt_style"
                    android:text="@string/full_name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:divider="@drawable/empty_divider"
                android:showDividers="middle"
                android:paddingHorizontal="30dp">

                <Button android:id="@+id/accept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accept"
                    android:layout_weight="1"/>

                <Button android:id="@+id/reject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reject" />

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>