<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.main.PostFragment"
    android:padding="20dp"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout android:id="@+id/postTop"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Post Type: "
                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                android:textColor="@color/white"/>

            <RadioGroup android:id="@+id/radioBtnGrp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/publicRadioBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="#1A99C4"
                    android:layout_marginStart="16dp"
                    android:text="Public"
                    android:textColor="@color/white"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/localRadioBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="#1A99C4"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:text="Local" />

                <RadioButton
                    android:id="@+id/privateRadioBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="#1A99C4"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:text="Private" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView android:id="@+id/postUniDropDownTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/university"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginEnd="5dp"/>

            <Spinner
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:popupBackground="#A8A8A8"
                android:id="@+id/spinnerUni"
                android:spinnerMode="dialog"
                android:background="#979797" />

            <TextView android:id="@+id/postdeptDropDownTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/department"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"/>

            <Spinner
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:popupBackground="#A8A8A8"
                android:id="@+id/spinnerDept"
                android:spinnerMode="dialog"
                android:background="#979797" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText android:id="@+id/postTitleEditTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Title"
                android:padding="10dp"
                android:background="@drawable/edit_background"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:gravity="top|left"
                android:textColorHint="#959595"
                android:layout_marginBottom="5dp"
                tools:ignore="Autofill,RtlHardcoded,TextFields"
                android:layout_weight="1"/>

            <Button android:id="@+id/postBtnSend"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/post"
                android:backgroundTint="#636363"
                android:layout_marginStart="5dp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>


        <EditText android:id="@+id/postDescriptionEditTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:background="@drawable/edit_background"
            android:hint="Description"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:gravity="top|left"
            android:textColorHint="#959595"
            tools:ignore="Autofill,RtlHardcoded,TextFields" />

    </LinearLayout>


</RelativeLayout>